# Experimentarium

./: .gitignore  Description.md  Flowchart.md  Learning_Plan.md  Makefile  README.md  Run_commands.md  callback_tutorial.md  cspell.config.yaml  hydra_learning_setup_final.py  profiler_tutorial.md  pyproject.toml  ruff.toml  sanity_check_commands.md  tutorial.md
configs/: config.yaml  profiler.yaml  sweep.yaml
configs/checkpoint/: default.yaml
configs/data/: tensor_file.yaml  toy_classification.yaml  toy_regression.yaml  toy_sequence.yaml
configs/experiment/: ablation_heads.yaml  baseline.yaml  regression.yaml  sanity_cpu.yaml  sanity_gpu.yaml
configs/logging/: default.yaml
configs/model/: cnn.yaml  mlp.yaml  regression_mlp.yaml  small_transformer.yaml
configs/optimizer/: adamw.yaml  sgd.yaml
configs/sanity/: default.yaml
configs/scheduler/: constant.yaml  cosine.yaml  cosine_restart.yaml  exponential.yaml  linear.yaml  multistep.yaml  none.yaml  onecycle.yaml  plateau.yaml  polynomial.yaml  step.yaml
configs/task/: classification.yaml  detection.yaml  language_modeling.yaml  ranking.yaml  regression.yaml  segmentation.yaml
configs/trainer/: default.yaml
docs/: Flowchart.md  Run_commands.md  sanity_check_commands.md
notebooks/: 01_eda.ipynb  02_results.ipynb
scripts/: __init__.py  cleanup_runs.py  compare_runs.py  eval.sh  evaluate_run.py  export_checkpoint.py  plot_metrics.py  preprocess.sh  profile.sh  run_registry.py  run_sanity.py  sweep.sh  train.sh  verify_checkpoints.py
src/: __init__.py  cli.py  main.py
src/callbacks/: __init__.py  base.py  common.py  factory.py
src/data/: __init__.py  dataloader.py  dataset.py  preprocess.py  transforms.py
src/engine/: __init__.py  evaluator.py  precision.py  trainer.py
src/losses/: __init__.py  losses.py
tests/: conftest.py  test_callbacks.py  test_checkpoint.py  test_config.py  test_data.py  test_dataset.py  test_distributed.py  test_metrics.py  test_model.py  test_precision.py  test_run_identity.py  test_run_tools.py  test_sanity.py  test_schedulers.py  test_tasks.py  test_training.py
(+32 files in other folders)
