[project]
name = "ml-template"
version = "0.1.0"
description = "Research-grade PyTorch experiment template"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "tqdm>=4.66",
  "rich>=13.0",
]

[project.optional-dependencies]
tracking = ["wandb>=0.16", "tensorboard>=2.15"]
vision = ["torchvision>=0.17"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
ml-train = "src.main:main"
ml-sanity = "scripts.run_sanity:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:launch_testing -p no:launch_testing_ros"

